Accessibility related changes
Adding styling for a class to visually hide text but make it available for screen reader. This class has been used on index.html

--- a/main.css
+++ b/main.css
@@ -38,3 +38,14 @@ footer {
         padding: 0 1em;
         white-space: nowrap;
     }
+
+sr-only {
+    border:0 none;
+  clip:rect(0px,0px,0px,0px);
+  height:1px;
+  margin:-1px;
+  overflow:hidden;
+  padding:0;
+  position:absolute;
+  width:1px
+}
