--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+body a {
+    text-decoration: underline;
+    color: #000099;
+}
+
 header {
     box-shadow: 0px 0px 1em #333333;
     z-index: 10;
