remove unnecessary list for a11y

--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@ header {
     z-index: 10;
 }
 
+    .navbar-brand {
+        line-height: 40px;
+    }
+
     .navbar-brand span {
         font-size: 40px;
         color: #006778;
