--- a/main.css
+++ b/main.css
@@ -69,6 +69,8 @@ sr-only {
     width: 1px
 }
 
-h2 span.material-symbols-sharp {
-    font-size: 3.5rem;
+span.material-symbols-sharp.floating-badge-icon {
+    font-size: 4rem;
+    display: block;
+    float: right;
 }
